# serializer version: 1
# name: test_frame_when_command_given_does_show_header_with_command_and_labels[compare]
  '''
  compare main, candidate · 5 samples
  ⠋ preparing · main 0:00:00
  '''
# ---
# name: test_frame_when_command_given_does_show_header_with_command_and_labels[measure]
  '''
  measure ecstatic-ts · 5 samples
  ⠋ preparing 0:00:00
  '''
# ---
# name: test_frame_when_compact_layout_on_short_console_does_show_single_row
  '⠋ sampling                                            0%  00:00/--:--'
# ---
# name: test_frame_when_mid_run_with_computed_eta_does_show_clock_total
  '⠋ sampling ━━━━━━━━━━━━━                            1/3 00:52/01:12'
# ---
# name: test_frame_when_multi_target_compare_does_name_running_target
  '⠋ sampling · candidate                                          0/10 00:00/--:--'
# ---
# name: test_frame_when_prepare_done_and_first_pass_running_does_show_pending_eta
  '⠋ sampling                                          0/3 00:00/--:--'
# ---
# name: test_frame_when_prepare_running_does_show_spinner_and_label
  '⠋ preparing 0:00:00'
# ---
